# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--devel@balabit.hu--other-1/syslog-ng--mainline--2.0
#

2006-12-22 10:01:22 GMT	Balazs Scheidler <bazsi@balabit.hu>	patch-113

    Summary:
      added so_keepalive support
    Revision:
      syslog-ng--mainline--2.0--patch-113

    	* src/cfg-grammar.y: added KW_SO_KEEPALIVE keyword,
    	(socket_option): added KW_SO_KEEPALIVE rule
    
    	* src/afsocket.h (SocketOptions): added keepalive member,
    
    	* src/afsocket.c (afsocket_setup_socket): set SO_KEEPALIVE socket
    	option based on the keepalive parameter
    

    modified files:
     ChangeLog src/afsocket.c src/afsocket.h src/cfg-grammar.y
     src/cfg-lex.l


2006-12-21 08:48:42 GMT	Balazs Scheidler <bazsi@balabit.hu>	patch-112

    Summary:
      fixed XML syntax error in refguide
    Revision:
      syslog-ng--mainline--2.0--patch-112

    
    

    modified files:
     ChangeLog doc/reference/syslog-ng.xml


2006-12-21 08:46:42 GMT	Balazs Scheidler <bazsi@balabit.hu>	patch-111

    Summary:
      bumped version to 2.0.1
    Revision:
      syslog-ng--mainline--2.0--patch-111

    
    

    modified files:
     ChangeLog VERSION


2006-12-21 08:45:35 GMT	Balazs Scheidler <bazsi@balabit.hu>	patch-110

    Summary:
      updated documentation with new dns cache options
    Revision:
      syslog-ng--mainline--2.0--patch-110

    
    

    modified files:
     ChangeLog doc/reference/syslog-ng.xml


2006-12-21 08:39:23 GMT	Balazs Scheidler <bazsi@balabit.hu>	patch-109

    Summary:
      NEWS preparations for syslog-ng 2.0.1
    Revision:
      syslog-ng--mainline--2.0--patch-109

    
    

    modified files:
     ChangeLog NEWS


2006-12-21 08:31:08 GMT	Balazs Scheidler <bazsi@balabit.hu>	patch-108

    Summary:
      obsoleted remove_if_older option in favour of overwrite_if_older
    Revision:
      syslog-ng--mainline--2.0--patch-108

    	* src/affile.{c,h}: renamed remove_if_older references to